# sdrl

./: .cursorrules  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: sdrl.yaml  supervised.yaml
scripts/: evaluate.py  preprocess.py  train.py
sdrl/: __init__.py  dataset.py  loss.py  model.py  preprocess.py
tests/: test_loss.py  test_model.py
